syntax = "proto3";

import "google/protobuf/timestamp.proto";

package candidates;

message ShopperChanged {
  enum Status {
    DRAFT = 0;
    PENDING = 1;
    DECLINED = 2;
    ENABLED = 3;
    DISABLED = 4;
  }

  enum EmploymentType {
    NOT_SET = 0;
    IP = 1;
    SELF_EMPLOYED = 2;
    AGENT = 3;
    OUTSOURCE = 4;
    EXTERNAL_EMPLOYEE = 5;
  }

  string uuid = 1;
  string name = 2;
  repeated string vehicle_types = 3;
  int64 store_id = 5;
  string store_uuid = 6;
  optional string login = 7;
  optional string phone = 8;
  Status status = 9;
  optional string inn = 10;
  EmploymentType employment_type = 11;
  optional string contract_number = 12;
  optional string contract_date = 13;
  optional uint64 helpdeskeddy_id = 14;
  bool tips_enabled = 15;
  google.protobuf.Timestamp created_at = 16;
  google.protobuf.Timestamp updated_at = 17;
}
